site/api/4.00/Lexing.md
<!-- ((! set title API !)) ((! set documentation !)) ((! set api !)) ((! set nobreadcrumb !)) -->
<div class="api"><header><nav class="toc brand"><a class="brand" href="https://ocaml.org/"><img src="colour-logo-gray.svg" class="svg" alt="OCaml"></a></nav><nav class="toc"><div class="toc_version"><a href="/docs" id="version-select">API Version 4.00</a></div><a href="index.html">&lt; General Index</a><div class="api_search"><input type="text" name="apisearch" id="api_search" oninput="mySearch(false);" onkeypress="this.oninput();" onclick="this.oninput();" onpaste="this.oninput();">
<img src="search_icon.svg" alt="Search" class="svg" onclick="mySearch(false)"></div>
<div id="search_results"></div><div class="toc_title"><a href="#top">Lexing</a></div><ul></ul></nav></header>

<h1>Module <a href="type_Lexing.html">Lexing</a></h1>
<pre><span class="keyword">module</span> Lexing: <code class="code"><span class="keyword">sig</span></code> <a href="Lexing.html">..</a> <code class="code"><span class="keyword">end</span></code></pre>The run-time library for lexers generated by <code class="code">ocamllex</code>.<br>
<hr width="100%">
<br>
<span id="6_Positions"><h6>Positions</h6></span><br>
<pre><code><span id="TYPEposition"><span class="keyword">type</span> <code class="type"></code>position</span> = {</code></pre><table class="typetable">
<tbody><tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span id="TYPEELTposition.pos_fname">pos_fname</span>&nbsp;:<code class="type">string</code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span id="TYPEELTposition.pos_lnum">pos_lnum</span>&nbsp;:<code class="type">int</code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span id="TYPEELTposition.pos_bol">pos_bol</span>&nbsp;:<code class="type">int</code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span id="TYPEELTposition.pos_cnum">pos_cnum</span>&nbsp;:<code class="type">int</code>;</code></td>

</tr></tbody></table>
}

<div class="info">
A value of type <code class="code">position</code> describes a point in a source file.
   <code class="code">pos_fname</code> is the file name; <code class="code">pos_lnum</code> is the line number;
   <code class="code">pos_bol</code> is the offset of the beginning of the line (number
   of characters between the beginning of the lexbuf and the beginning
   of the line); <code class="code">pos_cnum</code> is the offset of the position (number of
   characters between the beginning of the lexbuf and the position).
   The difference between <code class="code">pos_cnum</code> and <code class="code">pos_bol</code> is the character
   offset within the line (i.e. the column number, assuming each
   character is one column wide).
<p>

   See the documentation of type <code class="code">lexbuf</code> for information about
   how the lexing engine will manage positions.<br>
</p></div>

<pre><span id="VALdummy_pos"><span class="keyword">val</span> dummy_pos</span> : <code class="type"><a href="Lexing.html#TYPEposition">position</a></code></pre><div class="info">
A value of type <code class="code">position</code>, guaranteed to be different from any
   valid position.<br>
</div>
<br>
<span id="6_Lexerbuffers"><h6>Lexer buffers</h6></span><br>
<pre><code><span id="TYPElexbuf"><span class="keyword">type</span> <code class="type"></code>lexbuf</span> = {</code></pre><table class="typetable">
<tbody><tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span id="TYPEELTlexbuf.refill_buff">refill_buff</span>&nbsp;:<code class="type"><a href="Lexing.html#TYPElexbuf">lexbuf</a> -&gt; unit</code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span class="keyword">mutable&nbsp;</span><span id="TYPEELTlexbuf.lex_buffer">lex_buffer</span>&nbsp;:<code class="type">string</code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span class="keyword">mutable&nbsp;</span><span id="TYPEELTlexbuf.lex_buffer_len">lex_buffer_len</span>&nbsp;:<code class="type">int</code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span class="keyword">mutable&nbsp;</span><span id="TYPEELTlexbuf.lex_abs_pos">lex_abs_pos</span>&nbsp;:<code class="type">int</code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span class="keyword">mutable&nbsp;</span><span id="TYPEELTlexbuf.lex_start_pos">lex_start_pos</span>&nbsp;:<code class="type">int</code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span class="keyword">mutable&nbsp;</span><span id="TYPEELTlexbuf.lex_curr_pos">lex_curr_pos</span>&nbsp;:<code class="type">int</code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span class="keyword">mutable&nbsp;</span><span id="TYPEELTlexbuf.lex_last_pos">lex_last_pos</span>&nbsp;:<code class="type">int</code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span class="keyword">mutable&nbsp;</span><span id="TYPEELTlexbuf.lex_last_action">lex_last_action</span>&nbsp;:<code class="type">int</code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span class="keyword">mutable&nbsp;</span><span id="TYPEELTlexbuf.lex_eof_reached">lex_eof_reached</span>&nbsp;:<code class="type">bool</code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span class="keyword">mutable&nbsp;</span><span id="TYPEELTlexbuf.lex_mem">lex_mem</span>&nbsp;:<code class="type">int array</code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span class="keyword">mutable&nbsp;</span><span id="TYPEELTlexbuf.lex_start_p">lex_start_p</span>&nbsp;:<code class="type"><a href="Lexing.html#TYPEposition">position</a></code>;</code></td>

</tr>
<tr>
<td align="left" valign="top">
<code>&nbsp;&nbsp;</code></td>
<td align="left" valign="top">
<code><span class="keyword">mutable&nbsp;</span><span id="TYPEELTlexbuf.lex_curr_p">lex_curr_p</span>&nbsp;:<code class="type"><a href="Lexing.html#TYPEposition">position</a></code>;</code></td>

</tr></tbody></table>
}

<div class="info">
The type of lexer buffers. A lexer buffer is the argument passed
   to the scanning functions defined by the generated scanners.
   The lexer buffer holds the current state of the scanner, plus
   a function to refill the buffer from the input.
<p>

   At each token, the lexing engine will copy <code class="code">lex_curr_p</code> to
   <code class="code">lex_start_p</code>, then change the <code class="code">pos_cnum</code> field
   of <code class="code">lex_curr_p</code> by updating it with the number of characters read
   since the start of the <code class="code">lexbuf</code>.  The other fields are left
   unchanged by the lexing engine.  In order to keep them
   accurate, they must be initialised before the first use of the
   lexbuf, and updated by the relevant lexer actions (i.e. at each
   end of line -- see also <code class="code">new_line</code>).<br>
</p></div>

<pre><span id="VALfrom_channel"><span class="keyword">val</span> from_channel</span> : <code class="type"><a href="Pervasives.html#TYPEin_channel">in_channel</a> -&gt; <a href="Lexing.html#TYPElexbuf">lexbuf</a></code></pre><div class="info">
Create a lexer buffer on the given input channel.
   <code class="code"><span class="constructor">Lexing</span>.from_channel inchan</code> returns a lexer buffer which reads
   from the input channel <code class="code">inchan</code>, at the current reading position.<br>
</div>
<pre><span id="VALfrom_string"><span class="keyword">val</span> from_string</span> : <code class="type">string -&gt; <a href="Lexing.html#TYPElexbuf">lexbuf</a></code></pre><div class="info">
Create a lexer buffer which reads from
   the given string. Reading starts from the first character in
   the string. An end-of-input condition is generated when the
   end of the string is reached.<br>
</div>
<pre><span id="VALfrom_function"><span class="keyword">val</span> from_function</span> : <code class="type">(string -&gt; int -&gt; int) -&gt; <a href="Lexing.html#TYPElexbuf">lexbuf</a></code></pre><div class="info">
Create a lexer buffer with the given function as its reading method.
   When the scanner needs more characters, it will call the given
   function, giving it a character string <code class="code">s</code> and a character
   count <code class="code">n</code>. The function should put <code class="code">n</code> characters or less in <code class="code">s</code>,
   starting at character number 0, and return the number of characters
   provided. A return value of 0 means end of input.<br>
</div>
<br>
<span id="6_Functionsforlexersemanticactions"><h6>Functions for lexer semantic actions</h6></span><br>
<br>
The following functions can be called from the semantic actions
   of lexer definitions (the ML code enclosed in braces that
   computes the value returned by lexing functions). They give
   access to the character string matched by the regular expression
   associated with the semantic action. These functions must be
   applied to the argument <code class="code">lexbuf</code>, which, in the code generated by
   <code class="code">ocamllex</code>, is bound to the lexer buffer passed to the parsing
   function.<br>
<pre><span id="VALlexeme"><span class="keyword">val</span> lexeme</span> : <code class="type"><a href="Lexing.html#TYPElexbuf">lexbuf</a> -&gt; string</code></pre><div class="info">
<code class="code"><span class="constructor">Lexing</span>.lexeme lexbuf</code> returns the string matched by
           the regular expression.<br>
</div>
<pre><span id="VALlexeme_char"><span class="keyword">val</span> lexeme_char</span> : <code class="type"><a href="Lexing.html#TYPElexbuf">lexbuf</a> -&gt; int -&gt; char</code></pre><div class="info">
<code class="code"><span class="constructor">Lexing</span>.lexeme_char lexbuf i</code> returns character number <code class="code">i</code> in
   the matched string.<br>
</div>
<pre><span id="VALlexeme_start"><span class="keyword">val</span> lexeme_start</span> : <code class="type"><a href="Lexing.html#TYPElexbuf">lexbuf</a> -&gt; int</code></pre><div class="info">
<code class="code"><span class="constructor">Lexing</span>.lexeme_start lexbuf</code> returns the offset in the
   input stream of the first character of the matched string.
   The first character of the stream has offset 0.<br>
</div>
<pre><span id="VALlexeme_end"><span class="keyword">val</span> lexeme_end</span> : <code class="type"><a href="Lexing.html#TYPElexbuf">lexbuf</a> -&gt; int</code></pre><div class="info">
<code class="code"><span class="constructor">Lexing</span>.lexeme_end lexbuf</code> returns the offset in the input stream
   of the character following the last character of the matched
   string. The first character of the stream has offset 0.<br>
</div>
<pre><span id="VALlexeme_start_p"><span class="keyword">val</span> lexeme_start_p</span> : <code class="type"><a href="Lexing.html#TYPElexbuf">lexbuf</a> -&gt; <a href="Lexing.html#TYPEposition">position</a></code></pre><div class="info">
Like <code class="code">lexeme_start</code>, but return a complete <code class="code">position</code> instead
    of an offset.<br>
</div>
<pre><span id="VALlexeme_end_p"><span class="keyword">val</span> lexeme_end_p</span> : <code class="type"><a href="Lexing.html#TYPElexbuf">lexbuf</a> -&gt; <a href="Lexing.html#TYPEposition">position</a></code></pre><div class="info">
Like <code class="code">lexeme_end</code>, but return a complete <code class="code">position</code> instead
    of an offset.<br>
</div>
<pre><span id="VALnew_line"><span class="keyword">val</span> new_line</span> : <code class="type"><a href="Lexing.html#TYPElexbuf">lexbuf</a> -&gt; unit</code></pre><div class="info">
Update the <code class="code">lex_curr_p</code> field of the lexbuf to reflect the start
    of a new line.  You can call this function in the semantic action
    of the rule that matches the end-of-line character.<br>
<b>Since</b> 3.11.0<br>
</div>
<br>
<span id="6_Miscellaneousfunctions"><h6>Miscellaneous functions</h6></span><br>
<pre><span id="VALflush_input"><span class="keyword">val</span> flush_input</span> : <code class="type"><a href="Lexing.html#TYPElexbuf">lexbuf</a> -&gt; unit</code></pre><div class="info">
Discard the contents of the buffer and reset the current
    position to 0.  The next use of the lexbuf will trigger a
    refill.<br>
</div>
<div class="copyright">The present documentation is copyright Institut National de Recherche en Informatique et en Automatique (INRIA). A complete version can be obtained from <a href="http://caml.inria.fr/pub/docs/manual-ocaml/">this page</a>.</div></div>